# fatigue-meter

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  fatigue  install.sh  pyproject.toml  statusline.sh
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_grunt_pattern.md
.github/workflows/: ci.yml
hooks/: hooks.json  setup-statusline.sh
lib/: analyzer.py  history.py  report.py  storage.py
skills/fatigue/: SKILL.md
