[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-fatigue"
version = "0.1.0"
description = "Track your Claude Code prompting energy levels. See when you're sharp vs running on fumes."
authors = [{name = "Prompt Fatigue Contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "claude",
    "claude-code",
    "prompting",
    "productivity",
    "fatigue",
    "ai",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/yourusername/prompt-fatigue"
Repository = "https://github.com/yourusername/prompt-fatigue"
Issues = "https://github.com/yourusername/prompt-fatigue/issues"

[tool.setuptools]
packages = ["lib"]
script-files = ["fatigue"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
